# claude-code-wsl-vs-supervisor

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: release.mjs
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  focus.rs  history.rs  ide.rs  lib.rs  main.rs  poller.rs  process_ext.rs  sessions.rs  status.rs  types.rs
src/components/: AgentRow.tsx  ChatPanel.tsx  ExpandableText.tsx  Markdown.tsx  ProjectBlock.tsx  Sidebar.tsx  TopBar.tsx  UpdateBanner.tsx
src/hooks/: useAgents.ts  useProjectOrder.ts
vscode-extension/: .vscodeignore  package-lock.json  package.json
vscode-extension/src/: extension.ts
